--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ rustc-hex = "1.0.0" # 2.0.1?
 serde_derive = "1.0.84"
 serde = "1.0.84"
 chrono = { version = "0.4", features = ["serde"] }
-ethereum-types = "0.6.0"
+# ethereum-types = "0.6.0"
 
 [lib]
 crate-type = ["cdylib"]
